--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "bloc-frontend-project-starter",
-  "version": "0.0.2",
-  "description": "Starter project for the Bloc Frontend Web Development",
+  "name": "taut",
+  "version": "0.1",
+  "description": "a channel-based chat app built with AngularJS",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bloc/bloc-frontend-project-starter"
+    "url": "https://github.com/deejayres/taut"
   },
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "author": "Bloc Inc",
+  "author": "Erin Resso",
   "license": "ISC",
   "dependencies": {
     "hapi": "~7.5.0",
