--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "./node_modules/mocha/bin/mocha"
   },
   "author": "Erin Resso",
   "license": "ISC",
@@ -24,6 +25,7 @@
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-hapi": "^0.8.1"
+    "grunt-hapi": "^0.8.1",
+    "mocha": "^3.1.2"
   }
 }
